--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 			].join('\n');
 			$('#b-alerts').append(html);
 		}
+		VK.Widgets.Comments('vk_comments', {limit: 10, width: '627', attach: '*'});
 	</script>
 	<!-- /main script -->
 	
