--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-	<script>
-		fetch(''https://api.vk.com/method/users.get').then(data => console.log(data));
-	</script>
+	<div id='main'>
+		
+	</div>
 	
 
 	<!-- VK scripts -->
@@ -24,7 +24,7 @@
 	<script type="text/javascript">
 	  VK.init(function() {
 	     // API initialization succeeded
-	     onReady();
+	    	fetch(''https://api.vk.com/method/users.get').then(data => $('#main').html(data));
        
 	  }, function() {
 	     // API initialization failed
