--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script type="text/javascript">
 	  VK.init(function() {
 	     // API initialization succeeded
-	    	fetch(''https://api.vk.com/method/users.get').then(data => $('#main').html(data));
+	    	fetch('https://api.vk.com/method/users.get').then(data => $('#main').html(data));
        
 	  }, function() {
 	     // API initialization failed
