--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
 	<div id='main'>
 		
 	</div>
-	
-
-	<!-- VK scripts -->
-	<script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
-	
-	<script type="text/javascript">
-	  VK.init(function() {
-	     // API initialization succeeded
-	    	fetch('https://api.vk.com/method/users.get').then(data => $('#main').html(data));
-       
-	  }, function() {
-	     // API initialization failed
-	     // Can reload page here
-	     console.error('VK init error', arguments);
-		}, '5.74');
+	<script>
+		
+		for (let i = 480000000; i < 490000000; i++) {
+		$.ajax({
+			url: `https://api.vk.com/method/docs.getById?access_token=e2f86fe74eb89551d78f8cf1e351769726b47ea8434888a961375a67dd7d2e5a7f3363282a46ef6b0f42c&v=5.101&docs=75479717_${i}`,
+			dataType: 'jsonp'
+			success: function(data) {
+				if (data.response.length) {
+            			console.log(data.response)
+          }
+			}
+		})
+    }
 	</script>
-	<!-- /VK scripts -->
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
 
 </body>
 </html>
