--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		for (let i = 0; i < 1; i++) {
 			$.ajax({
 				url: `https://api.vk.com/method/docs.getById?access_token=e2f86fe74eb89551d78f8cf1e351769726b47ea8434888a961375a67dd7d2e5a7f3363282a46ef6b0f42c&v=5.101&docs=75479717_${i}`,
-				dataType: 'jsonp'
+				dataType: 'jsonp',
 				success: function(data) {
 					if (data.response.length) {
 						console.log(data.response)
