--- a/index.html
+++ b/index.html
@@ -21,19 +21,23 @@
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
 	<script>
-		
-		for (let i = 480000000; i < 490000000; i++) {
-			$.ajax({
-				url: `https://api.vk.com/method/docs.getById?access_token=e2f86fe74eb89551d78f8cf1e351769726b47ea8434888a961375a67dd7d2e5a7f3363282a46ef6b0f42c&v=5.101&docs=75479717_${i}`,
+		$.ajax({
+				url: `https://oauth.vk.com/authorize?client_id=7088372&display=page&scope=docs&response_type=token&v=5.101&state=123456`,
 				dataType: 'jsonp',
 				success: function(data) {
-					if (data.response.length) {
-						console.log(data.response)
-					}
+					console.log(data)
 				}
-			})
-    		}
-		console.log('as')
+		})
+		
+// 			$.ajax({
+// 				url: `https://api.vk.com/method/docs.getById?access_token=e2f86fe74eb89551d78f8cf1e351769726b47ea8434888a961375a67dd7d2e5a7f3363282a46ef6b0f42c&v=5.101&docs=75479717_478903413`,
+// 				dataType: 'jsonp',
+// 				success: function(data) {
+// 					if (data.response.length) {
+// 						console.log(data.response)
+// 					}
+// 				}
+// 			})
 	</script>
 	
 
