--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div id='main'>
-		
+		<a src='https://oauth.vk.com/authorize?client_id=7088372&display=page&scope=docs&response_type=token&v=5.101&state=123456'>GO</a>
 	</div>
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
