--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   crossorigin="anonymous"></script>
 	<script>
 		$.ajax({
-				url: `https://oauth.vk.com/authorize?client_id=7088372&display=page&scope=docs&response_type=token&v=5.101&state=123456`,
+				url: `https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456`,
 				dataType: 'jsonp',
 				success: function(data) {
 					console.log(data)
