--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				url: `https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456`,
 				success: function(data) {
 					console.log(data)
-				}
+				},
+				dataType: 'jsonp'
 		})
 		
 // 			$.ajax({
