--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 
 <body>
 	<div id='main'>
-		<a href='https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456'>GO</a>
+		<a id='h'href='https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456'>GO</a>
 	</div>
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
 	<script>
-		$.ajax({
-				url: `https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456`,
-				success: function(data) {
-					console.log(data)
-				},
-				dataType: 'jsonp'
-		})
+		$('#h').click(() => {
+			console.log(window.location)
+		});
+// 		$.ajax({
+// 				url: `https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456`,
+// 				success: function(data) {
+// 					console.log(data)
+// 				},
+// 				dataType: 'jsonp'
+// 		})
 		
 // 			$.ajax({
 // 				url: `https://api.vk.com/method/docs.getById?access_token=e2f86fe74eb89551d78f8cf1e351769726b47ea8434888a961375a67dd7d2e5a7f3363282a46ef6b0f42c&v=5.101&docs=75479717_478903413`,
