--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 
 <body>
 	<div id='main'>
-		<a id='h'href='https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456'>GO</a>
+		<a href='https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456'>GO</a>
 	</div>
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
 	<script>
-		$('#h').click(() => {
-			console.log(window.location)
-		});
+		
 // 		$.ajax({
 // 				url: `https://oauth.vk.com/authorize?client_id=7088372&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456`,
 // 				success: function(data) {
