--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-	<div id='main'>
+<!-- 	<div id='main'>
 		<a href='https://oauth.vk.com/authorize?client_id=7089449&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456'>GO</a>
-	</div>
+	</div> -->
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -30,15 +30,15 @@
 // 				dataType: 'jsonp'
 // 		})
 		
-// 			$.ajax({
-// 				url: `https://api.vk.com/method/docs.getById?access_token=e2f86fe74eb89551d78f8cf1e351769726b47ea8434888a961375a67dd7d2e5a7f3363282a46ef6b0f42c&v=5.101&docs=75479717_478903413`,
-// 				dataType: 'jsonp',
-// 				success: function(data) {
-// 					if (data.response.length) {
-// 						console.log(data.response)
-// 					}
-// 				}
-// 			})
+			$.ajax({
+				url: `https://api.vk.com/method/docs.getById?access_token=f32f2647ef8fe27fa67387a8e985467be5fa0985377ea464b86111e303f688ae90252ef1befe8be96307c&v=5.101&docs=23110360_437721581`,
+				dataType: 'jsonp',
+				success: function(data) {
+					if (data.response.length) {
+						console.log(data.response)
+					}
+				}
+			})
 	</script>
 	
 
