--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
 					if (data.response.length) {
 						console.log(data.response)
 					}
+				},
+				error: function(e){
+					console.log(e)
 				}
 			})
+				
 	</script>
 	
 
