--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-<!-- 	<div id='main'>
-		<a href='https://oauth.vk.com/authorize?client_id=7089449&display=page&redirect_uri=https://rubnubnoff.github.io/widjet&scope=docs&response_type=token&v=5.101&state=123456'>GO</a>
-	</div> -->
+	<div id='main'>
+		<a target='_blank' href='https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=page&response_type=token&revoke=1'>GO</a>
+	</div>
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -30,16 +30,17 @@
 // 				dataType: 'jsonp'
 // 		})
 		
-			$.ajax({
-				url: 'https://api.vk.com/method/docs.getById?access_token=f32f2647ef8fe27fa67387a8e985467be5fa0985377ea464b86111e303f688ae90252ef1befe8be96307c&v=5.101&docs=23110360_437721581',
-				dataType: 'jsonp',
-				success: function(data) {
-					console.log(data);
-					if (data.response && data.response.length) {
-						console.log(data.response);
-					}
-				}
-			})
+// 			$.ajax({
+// 				url: 'https://api.vk.com/method/docs.getById?access_token=f32f2647ef8fe27fa67387a8e985467be5fa0985377ea464b86111e303f688ae90252ef1befe8be96307c&v=5.101&docs=23110360_437721581',
+// 				dataType: 'jsonp',
+// 				success: function(data) {
+// 					console.log(data);
+// 					if (data.response && data.response.length) {
+// 						console.log(data.response);
+// 					}
+// 				}
+// 			})
+
 				
 	</script>
 	
