--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div id='main'>
-		<a target='_blank' href='https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=page&response_type=token&revoke=1'>GO</a>
+		<a href='https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1'>GO</a>
 	</div>
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
