--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta charset="utf-8">
 
     <title>Widgeteer</title>
-    <meta name="description" content="Создание виджета для сообщества ВКонтакте">
-    <meta name="keywords" content="Sergei Sokolov,ВК,виджет,конструктор">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <meta name="robots" content="noindex,nofollow">
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 
 <body>
+	<iframe>
+		src="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1" width="468" height="60" align="left"
+	</iframe>
 	<div id='main'>
 		<a href='https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1'>GO</a>
 	</div>
