--- a/index.html
+++ b/index.html
@@ -13,9 +13,23 @@
 </head>
 
 <body>
-	<iframe>
-		src="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1" width="468" height="60" align="left"
+	<iframe src="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1" width="468" height="60" align="left">
+		
 	</iframe>
+<!-- 	<iframe width="468" height="60" align="left">
+		<!DOCTYPE html>
+
+		<html lang="">
+				<head>
+    					<meta charset="utf-8">
+    					<title>Widgeteer</title>
+				</head>
+				<body>
+					<a href="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1">Go</a>
+				</body>
+		</html>
+		 
+	</iframe> -->
 	<div id='main'>
 		<a href='https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1'>GO</a>
 	</div>
