--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
 	<iframe src="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1" width="468" height="60" align="left">
-		
+		<a href="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1">Go</a>
 	</iframe>
-<!-- 	<iframe width="468" height="60" align="left">
+	<iframe width="468" height="60" align="left">
 		<!DOCTYPE html>
 
 		<html lang="">
@@ -29,7 +29,7 @@
 				</body>
 		</html>
 		 
-	</iframe> -->
+	</iframe>
 	<div id='main'>
 		<a href='https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1'>GO</a>
 	</div>
