--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 	<iframe src="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1" width="468" height="60" align="left">
 		<a href="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1">Go</a>
 	</iframe>
-	<iframe width="468" height="60" align="left">
-		<!DOCTYPE html>
-
-		<html lang="">
+	<iframe srcdoc='
+			<html lang="">
 				<head>
     					<meta charset="utf-8">
     					<title>Widgeteer</title>
@@ -27,8 +25,9 @@
 				<body>
 					<a href="https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1">Go</a>
 				</body>
-		</html>
-		 
+			</html>
+		'>
+			 
 	</iframe>
 	<div id='main'>
 		<a href='https://oauth.vk.com/authorize?client_id=2685278&scope=messages,offline&redirect_uri=https://api.vk.com/blank.html&display=popup&response_type=token&revoke=1'>GO</a>
